examples/eks-managed-node-group/ingress/hotelsanmoritz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hotelsanmoritz
  namespace: moritz
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: prod-alpha-07
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-1-2021-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:975049889333:certificate/55a6e827-85ec-4b7f-8d38-d7bcf6d2a5cd'
spec:
  ingressClassName: alb
  rules:
  - host: hotelsanmoritz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moritz-web-prod-svc
            port:
              number: 80
  - host: www.hotelsanmoritz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moritz-web-prod-svc
            port:
              number: 80
